@@ -37,6 +37,9 @@
     <GeometryDrawing x:Key="Entypo+.Star" Brush="#FF000000" Geometry="M8,4.335E-008 L10.17,6.111 L16,6.111 L11.24,9.699 L12.94,16 L8,12.22 L3.057,16 L4.757,9.699 L-8.669E-010,6.111 L5.829,6.111 L8,4.335E-008 z" />
     <GeometryDrawing x:Key="Entypo+.StarOutline" Brush="#FF000000" Geometry="M16,6.111 L10.17,6.111 L8,4.335E-008 L5.829,6.111 L-8.669E-010,6.111 L4.756,9.699 L3.055,16 L8,12.22 L12.94,16 L11.24,9.699 L16,6.111 z M8,10.44 L5.261,12.71 L6.391,9.473 L3.799,7.382 L7.001,7.474 L8,3.802 L8.999,7.474 L12.2,7.382 L9.609,9.473 L10.74,12.71 L8,10.44 z" />
 
+    <GeometryDrawing x:Key="PicolIcons.Trash" Brush="#FF000000" Geometry="M13.72,2.163 L13.71,2.163 C13.7,1.606 13.32,1.282 12.94,1.053 C11.78,0.3767 9.533,0.0128 6.858,0 C5.08,0 3.475,0.1792 2.271,0.4828 C1.67,0.6382 1.167,0.8174 0.7717,1.053 C0.395,1.282 0.01829,1.606 0,2.163 C0,2.18 0.003657,2.194 0.005486,2.209 L0.001829,2.209 L0.9747,13.95 L0.9948,14.01 C1.077,14.31 1.966,16.03 6.858,16 L6.982,16 C11.8,16 12.64,14.31 12.72,14 L12.74,13.94 L13.71,2.209 L13.71,2.209 C13.71,2.194 13.72,2.18 13.72,2.163 z M1.201,2.143 C1.421,1.942 2.169,1.639 3.173,1.454 C4.182,1.26 5.466,1.143 6.858,1.143 C8.553,1.143 10.09,1.319 11.16,1.591 C11.7,1.726 12.12,1.889 12.35,2.034 C12.44,2.083 12.5,2.129 12.53,2.163 C12.53,2.169 12.52,2.176 12.51,2.184 C12.29,2.385 11.55,2.688 10.54,2.873 C9.533,3.067 8.249,3.184 6.858,3.184 C5.161,3.184 3.625,3.006 2.553,2.736 C2.017,2.602 1.598,2.438 1.359,2.293 C1.276,2.244 1.216,2.198 1.18,2.163 C1.185,2.156 1.194,2.151 1.201,2.143 z M11.61,13.68 C11.47,13.89 10.62,14.85 6.858,14.86 C4.521,14.86 3.284,14.47 2.674,14.13 C2.365,13.96 2.209,13.81 2.136,13.72 C2.12,13.7 2.109,13.69 2.099,13.67 L1.258,3.511 C2.504,4.036 4.517,4.316 6.858,4.329 C8.633,4.327 10.24,4.148 11.44,3.842 C11.82,3.745 12.16,3.636 12.46,3.509 L11.61,13.68 z" />
+    <GeometryDrawing x:Key="Material.DeleteRestore" Brush="#FF000000" Geometry="M8,9.778 L9.778,9.778 L6.222,6.222 L2.667,9.778 L4.444,9.778 L4.444,13.33 L8,13.33 L8,9.778  M0.8889,3.556 L11.56,3.556 L11.56,14.22 C11.56,14.67 11.38,15.11 11.01,15.46 C10.67,15.82 10.22,16 9.778,16 L2.667,16 C2.222,16 1.778,15.82 1.431,15.46 C1.067,15.11 0.8889,14.67 0.8889,14.22 L0.8889,3.556  M12.44,0.8889 L12.44,2.667 L0,2.667 L0,0.8889 L3.111,0.8889 L4,0 L8.444,0 L9.333,0.8889 L12.44,0.8889 z" />
+
     <GeometryDrawing x:Key="Vaadin.List" Brush="#FF000000" Geometry="M0,0 L4,0 L4,3 L0,3 L0,0 z M0,4 L4,4 L4,7 L0,7 L0,4 z M0,12 L4,12 L4,15 L0,15 L0,12 z M0,8 L4,8 L4,11 L0,11 L0,8 z M5,0 L16,0 L16,3 L5,3 L5,0 z M5,4 L16,4 L16,7 L5,7 L5,4 z M5,12 L16,12 L16,15 L5,15 L5,12 z M5,8 L16,8 L16,11 L5,11 L5,8 z" />
     <GeometryDrawing x:Key="Bootstrap.ShareFill" Brush="#FF000000" Geometry="M11,2.5 A2.5,-2.5 0 1 1 11.6,4.128 L4.884,7.247 A2.499,-2.499 0 0 1 4.884,8.751 L11.6,11.87 A2.5,-2.5 0 1 1 11.11,12.75 L4.396,9.627 A2.5,-2.5 0 1 1 4.396,6.371 L11.11,3.252 A2.5,-2.5 0 0 1 11,2.5 z" />
     <GeometryDrawing x:Key="FeatherIcons.Tool" Brush="#FF000000" Geometry="M9.851,3.623 A0.8419,0.8419 0 0 0 9.851,4.802 L11.2,6.149 A0.8419,0.8419 0 0 0 12.38,6.149 L15.55,2.975 A5.051,5.051 0 0 1 8.866,9.66 L3.049,15.48 A1.786,1.786 0 0 1 0.5231,12.95 L6.34,7.134 A5.051,5.051 0 0 1 13.02,0.4494 L9.86,3.615 z" />
