@@ -8,7 +8,7 @@
              mc:Ignorable="d" d:DesignWidth="350" d:DesignHeight="100"
              x:Class="Slithin.UI.ContextualMenus.NotebooksContextualMenu">
     <DockPanel>
-        <StackPanel Spacing="4" Orientation="Horizontal" HorizontalAlignment="Left" DockPanel.Dock="Left">
+        <StackPanel IsVisible="{Binding !IsInTrash, Mode=TwoWay}" Spacing="4" Orientation="Horizontal" HorizontalAlignment="Left" DockPanel.Dock="Left">
             <controls:ImageButton MinHeight="60" Classes="Flat" Text="{l:Localisation 'Folder'}" Command="{Binding MakeFolderCommand}" Image="{DynamicResource Ionicons.AddiOS}" />
 
             <controls:ImageButton MinHeight="60" Classes="Flat" Text="{l:Localisation 'Remove'}" Command="{Binding RemoveNotebookCommand}" Image="{DynamicResource Cool.TrashFull}" CommandParameter="{Binding SelectedNotebook}" />
@@ -24,6 +24,12 @@
                     </Border>
                 </controls:ImagePopupButton.PopupContent>
             </controls:ImagePopupButton>
+        </StackPanel>
+
+        <StackPanel IsVisible="{Binding IsInTrash, Mode=TwoWay}" Spacing="4" Orientation="Horizontal" HorizontalAlignment="Left" DockPanel.Dock="Left">
+            <controls:ImageButton MinHeight="60" Classes="Flat" Text="{l:Localisation 'Restore'}" Command="{Binding RestoreCommand}" Image="{DynamicResource Material.DeleteRestore}" CommandParameter="{Binding SelectedNotebook}" />
+
+            <controls:ImageButton MinHeight="60" Classes="Flat" Text="{l:Localisation 'Empty Trash'}" Command="{Binding EmptyTrashCommand}" Image="{DynamicResource PicolIcons.Trash}" />
         </StackPanel>
     </DockPanel>
 </UserControl>
