@@ -4,10 +4,11 @@ Version 1.0.16
 - Add Automatic IP-Address Adjustment After Update
 - Better Icons
 - Design Fixes
+- Add Special ContextualMenu For Trash
 
 Version 1.0.15
 
-- Bugfix 
+- Bugfix
 
 Version 1.0.13
 
